fixed white space and nav

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,15 @@
   }
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 .heading {
   font-family: "Dancing Script", cursive;
   font-size: 400%;
