--- a/client/src/Components/navigation.css
+++ b/client/src/Components/navigation.css
@@ -25,7 +25,3 @@
   margin-top: auto;
   margin-bottom: auto;
 }
-
-/* .navbar-expand-lg.navbar-light {
-  background-color: #e3f2fd;
-} */
